# bada-lang

./: CMakeLists.txt  LICENSE  README.md  asmtest  asmtest2  bada_1.2.0_aarch64.deb  build.sh  cpptest  downtest  enumtest  fulltest  importtest  mixasmcxx  mixtest  stdlibtest  structtest  v11test  v12test
examples/: asm_test.bada  asm_test2.bada  cpp_test.bada  downgrade_test.bada  enum_test.bada  error.bada  full_test.bada  main_import.bada  math.bada  mix_asm_cxx.bada  mix_test.bada  stdlib_test.bada  struct_test.bada  test.bada  v11_test.bada  v12_test.bada
include/: ast.h  codegen.h  error.h  lexer.h  parser.h  transpiler.h
src/: codegen.cpp  error.cpp  lexer.cpp  main.cpp  parser.cpp  transpiler.cpp
termux-package/: README-PACKAGE.md  bada.subpackage.sh  build.sh  make-deb.sh
